test/types/enum/lydia/use/namingConflictOtherModule.good
namingConflictOtherModule.chpl:4: error: symbol a is multiply defined
namingConflictOtherModule.chpl:8: note: also defined here
